Uploading portfolio files

--- a/index.html
+++ b/index.html
@@ -1,3 +1,327 @@
+<!DOCTYPE HTML>
 <html>
-<h1>Welcome to my website!</h1>
+	<head>
+		<title>ChiChi Ugochukwu Portfolio</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	</head>
+	<body class="is-preload">
+
+		<!-- Wrapper -->
+			<div id="wrapper" class="divided">
+
+				<!-- One -->
+					<section class="banner style3 orient-center content-align-center image-position-center fullscreen onload-image-fade-in onload-content-fade-up">
+						<div class="content">
+							<h1>Chinweoke Ugochukwu</h1>
+							<p class="major">Data Analyst with a background in Veterinary Healthcare and Biology </p>
+							<ul class="actions fit">
+								<li><a href="#first" class="button big wide smooth-scroll">About Me</a></li>
+								<li><a href="#second" class="button big wide smooth-scroll">Projects</a></li>
+							</ul>
+						</div>
+						<div class="image">
+							<img src="images/Headshot.JPG" alt="" />
+						</div>
+					</section>
+
+				<!-- Two: About Me -->
+					<section class="spotlight style4 orient-left content-align-left image-position-center onscroll-image-fade-in" id="first">
+						<div class="content">
+							<h2>About Me</h2>
+							<h4>Hi, I'm ChiChi!  Welcome to my Portfolio</h4>
+							<p>I am a recent graduate with a passion for exploration, problem-solving, and education. My data journey began during 
+								my undergraduate studies at the College of William and Mary, where I earned a Bachelor of Science in Biology. Additionally,
+								I was able to complete a heavily quantitative-focused course load that earned my minor in Computational and Applied Mathematics 
+								and Statistics. It was here that I began developing my analytic skills and became proficient in Python and R, while also gaining
+								experience with other software languages and programs. <br><br>
+								My work experience after completing my degree is primarily in my role at a Veterinary Assistant in Emergency Veterinary clinics. 
+								During this time, I fostered my interest in data science by continually seeking articles and sources to delve into the realm of data 
+								analytics as a profession - with a particular interest in data analytics as it relates to veterinary medicine and healthcare. From here,
+								I sought to enhance my data education and enrolled in an intensive bootcamp through the University of North Carolina at	Chapel Hill. Here, 
+								I completed the course work with a 97% grade average and earned a certificate in Data Analytics. <br><br>
+								Through my education, I have amassed and developed skills in data collection, organization, and analysis using various tools and technologies.
+								I have a solid understanding of data analytics techniques - including, but not limited to, machine learning, dashboard building, data mining, and 
+								statistical analysis. I also have the strong belief that my diverse work experience provides me with a unique perspective that further enhances my 
+								problem-solving mindset and enables me to approach analytics with a strategic mindset. Working in veterinary healthcare has developed my skills in 
+								communication, quick and decisive thinking, and problem-solving. <br><br>
+								I hope to utilize my skills and experience to perform effectively as a data analyst in any capacity and I am eager to further my education and knowledge
+								in this field!
+							</p>
+						</div>
+						<div class="image">
+							<img src="images/roanoke.jpg" alt="" />
+						</div>
+					</section>
+
+				<!-- Three: Skills -->
+					<section class="wrapper style1 align-center">
+						<div class="inner">
+							<h2>Technical Skills</h2>
+							<div class="items style3 medium onscroll-fade-in">
+								<section>
+									<span class="icon brands style1 major fa-python"></span>
+									<h3>Python</h3>
+									<p>Primarily worked in Jupyter Notebook, Google Colab, and Spyder (Anaconda3).
+										<br>Most used libraries: pandas, numpy, matplotlib, plotly
+									</p>
+								</section>
+								<section>
+									<span class="icon brands style1 major fa-r-project"></span>
+									<h3>R</h3>
+									<p>Primarily worked in RStudio
+										<br>Most used libraries: dplyr, tidyr, ggplot2 
+									</p>
+								</section>
+								<section>
+									<span class="icon solid style1 major fa-database"></span>
+									<h3>SQL</h3>
+									<p>Worked primarily with PostgreSQL, SQLite, and SQLAlchemy.</p>
+								</section>
+								<section>
+									<span class="icon brands style1 major fa-html5"></span>
+									<h3>HTML</h3>
+									<p>Used primarily in building simple webpages to effectively display data visualizations.</p>
+								</section>
+								<section>
+									<span class="icon brands style1 major fa-js"></span>
+									<h3>JavaScript</h3>
+									<p>Experience using JavaScript in conjunction with HTML to create dynamic tables and maps.</p>
+								</section>
+								<section>
+									<span class="icon solid style1 major fa-file-excel"></span>
+									<h3>VBA</h3>
+									<p>Primarily worked with Microsoft Excel. Creating code to sort data, retrieve information, and also clean datasets.</p>
+								</section>
+								<section>
+									<span class="icon brands style1 major fa-aws"></span>
+									<h3>AWS</h3>
+									<p>Experience storing data in S3 and retrieving data to work with in PostgreSQL and Jupyter Notebook.</p>
+								</section>
+								<section>
+									<span class="icon brands style1 major fa-github-alt"></span>
+									<h3>Git</h3>
+									<p>Worked extensively with GitHub, GitLab, and in the GitBash terminal.</p>
+								</section>
+								<section>
+									<svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 512 512"><path fill="currentColor" d="M242.69 340.3h26.62v-72.6h67v-25.82h-67v-72.6h-26.62v72.6h-66.15v25.82h66.15ZM119.26 445.18h22.59v-64.54h59.7v-20.17h-59.7v-65.34h-22.59v65.34h-59.7v20.17h59.7ZM370.15 212h22.59v-64.5h60.5v-19.37h-60.5V62.79h-22.59v65.34h-59.7v19.37h59.7ZM246.72 496h19.36v-46h41.15v-16.92h-41.15v-46h-19.36v46h-40.33V450h40.33ZM120.07 212h21v-65.31h60.51v-18.56H141V62.79h-21v65.34H59.56v18.56h60.51Zm315.65 96.84h19.36v-45.18H496v-17.74h-40.92v-45.18h-19.36v45.18h-40.33v17.74h40.33Z"/><path fill="currentColor" fill-rule="evenodd" d="M370.15 445.18h22.59v-64.54h60.5v-20.17h-60.5v-65.34h-22.59v65.34h-59.7v20.17h59.7Z"/><path fill="currentColor" d="M307 74.08V60.37h-40.34V16h-14.52v44.37h-40.33v13.71h40.33v44.37h14.52V74.08ZM56.11 305.61h14.52v-44.37H111v-13.71H70.63V204H56.11v43.56H16v14.52l40.11-.08Z"/></svg>
+									<h3> </h3>
+									<h3>Tableau</h3>
+									<p>Worked primarily with Tableau Public for dashboard creation and data visualizations.</p>
+								</section>
+								<section>
+									<svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="32" height="32"><title>Google Colab</title><path d="M16.9414 4.9757a7.033 7.033 0 0 0-4.9308 2.0646 7.033 7.033 0 0 0-.1232 9.8068l2.395-2.395a3.6455 3.6455 0 0 1 5.1497-5.1478l2.397-2.3989a7.033 7.033 0 0 0-4.8877-1.9297zM7.07 4.9855a7.033 7.033 0 0 0-4.8878 1.9316l2.3911 2.3911a3.6434 3.6434 0 0 1 5.0227.1271l1.7341-2.9737-.0997-.0802A7.033 7.033 0 0 0 7.07 4.9855zm15.0093 2.1721l-2.3892 2.3911a3.6455 3.6455 0 0 1-5.1497 5.1497l-2.4067 2.4068a7.0362 7.0362 0 0 0 9.9456-9.9476zM1.932 7.1674a7.033 7.033 0 0 0-.002 9.6816l2.397-2.397a3.6434 3.6434 0 0 1-.004-4.8916zm7.664 7.4235c-1.38 1.3816-3.5863 1.411-5.0168.1134l-2.397 2.395c2.4693 2.3328 6.263 2.5753 9.0072.5455l.1368-.1115z"/></svg>
+									<h3> </h3>
+									<h3>Google Colab</h3>
+									<p>Utilized during group work for more efficient communication and sharing of work between members. Worked primarily with Python.</p>
+								</section>
+								<section>
+									<svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 32 32"><path fill="currentColor" d="m26.135 16l.13 6.266l-4.13-2.401v8.938l-5.469 3.198v-32l13.599 7.865v7.068l-8.13-4.797v3.599zM1.734 7.865L15.333 0v32l-5.469-3.198V10.135l-8.13 4.797z"/></svg>
+									<h3> </h3>
+									<h3>Machine Learning</h3>
+									<p>Worked primarily with python using the Scikit-learn and TensorFlow libraries.</p>
+								</section>
+							</div>
+						</div>
+					</section>
+				
+				<!-- Four: Group Project-->
+					<section class="spotlight style5 orient-center content-align-center image-position-center onscroll-image-fade-in" id="second">
+						<div class="content">
+							<h2>Group Projects</h2>
+							<h3>Tickborne Illness Prevalence and Prediction</h3>
+							<p>An exploratory analysis of tick prevalence in the United States and predictive measures of tickborne illness diagnosis in dogs.</p>
+							<ul class="actions fit">
+								<li><a class="button primary fit small">VBA</a></li>
+								<li><a class="button primary fit small">Python</a></li>
+								<li><a class="button primary fit small">R</a></li>
+								<li><a class="button primary fit small">SQL</a></li>
+							</ul>
+							<ul class="actions fit">
+								<li><a class="button primary fit small">Machine Learning</a></li>
+								<li><a class="button primary fit small">Google Colab</a></li>
+								<li><a class="button primary fit small">Tableau</a></li>
+							</ul>
+							<ul class="actions fit">
+								<li><a href="https://github.com/chichi-ugo/Tick-Borne_Disease_Prevalence_and_Prediction" class="button">View Project</a></li>
+							</ul>
+						</div>
+						<div class="image">
+							<img src="images/tick_map.PNG" alt="" />
+						</div>
+					</section>
+				<!-- Three -->
+					<section class="wrapper style1 align-center color1 invert">
+						<div class="inner">
+							<h2>Individual Projects</h2>
+						</div>
+						<!-- Gallery -->
+							<div class="gallery style2 big lightbox onscroll-fade-in">
+								<article>
+									<a href="images/gallery/fulls/01_mechacar.png" class="image" alt="">
+										<img src="images/gallery/thumbs/mechacar.png" alt="" />
+									</a>
+									<div class="caption">
+										<h3>MechaCar Analysis</h3>
+										<p>Analysis of the MechaCar dataset to perform statistical testing to garner insights about performance and production car prototype.</p>
+										<ul class="actions fixed">
+											<li><span class="button primary small">R</span></li>
+											<li><span class="button primary small">R Studio</span></li>
+										</ul>
+									</div>
+									<ul class="actions fit">
+										<li><a href="https://github.com/chichi-ugo/MechaCar_Statistical_Analysis" class="button primary">View Project</a></li>
+									</ul>
+								</article>
+								<article>
+									<a href="images/gallery/fulls/02_neuralnetworks.png" class="image">
+										<img src="images/gallery/thumbs/neuralnetworks.png" alt="" />
+									</a>
+									<div class="caption">
+										<h3>Neural Network Charity Analysis</h3>
+										<p>Developing a deep neural network model that can predict success potential of charities funded by AlphabetSoup company.</p>
+										<ul class="actions fixed">
+											<li><span class="button primary small">Python</span></li>
+											<li><span class="button primary small">Tensorflow</span></li>
+										</ul>
+										<ul class="actions fixed">
+											<li><span class="button primary small">Machine Learning</span></li>
+										</ul>
+									</div>
+									<ul class="actions fit">
+										<li><a href="https://github.com/chichi-ugo/Neural_Network_Charity_Analysis" class="button primary">View Project</a></li>
+									</ul>
+								</article>
+								<article>
+									<a href="images/gallery/fulls/03_amazon_vine.jpg" class="image">
+										<img src="images/gallery/thumbs/amazon_vine.jpg" alt="" />
+									</a>
+									<div class="caption">
+										<h3>Amazon Vine Analysis</h3>
+										<p>Analysis of Amazon reviews written by members of the paid Amazon Vine program in order to potentially undercover biases.</p>
+										<ul class="actions fixed">
+											<li><span class="button primary small">PySpark</span></li>
+											<li><span class="button primary small">PostgreSQL</span></li>
+										</ul>
+										<ul class="actions fixed">
+											<li><span class="button primary small">Google Colab</span></li>
+											<li><span class="button primary small">AWS</span></li>
+										</ul>
+									</div>
+									<ul class="actions fit">
+										<li><a href="https://github.com/chichi-ugo/Amazon_Vine_Analysis" class="button primary">View Project</a></li>
+									</ul>
+								</article>
+								<article>
+									<a href="images/gallery/fulls/04_citibike.png" class="image">
+										<img src="images/gallery/thumbs/citibike.png" alt="" />
+									</a>
+									<div class="caption">
+										<h3>Bike Sharing</h3>
+										<p>Exploring the CitiBike data set to create comprehensive visualizations in Tableau.</p>
+										<ul class="actions fixed">
+											<li><span class="button primary small">Python</span></li>
+											<li><span class="button primary small">Tableau</span></li>
+										</ul>
+									</div>
+									<ul class="actions fit">
+										<li><a href="https://github.com/chichi-ugo/BikeSharing" class="button primary">View Project</a></li>
+									</ul>
+								</article>
+								<article>
+									<a href="images/gallery/fulls/05_cryptocurrencies.png" class="image">
+										<img src="images/gallery/thumbs/cryptocurrencies.png" alt="" />
+									</a>
+									<div class="caption">
+										<h3>Cryptocurrency Data Exploration</h3>
+										<p>Analyzing cryptocurrency data and using unsupervised machine learning models to uncover trends in the data that may influences investors.</p>
+										<ul class="actions fixed">
+											<li><span class="button primary small">Python</span></li>
+											<li><span class="button primary small">Machine Learning</span></li>
+										</ul>
+									</div>
+									<ul class="actions fit">
+										<li><a href="https://github.com/chichi-ugo/Cryptocurrencies" class="button primary">View Project</a></li>
+									</ul>
+								</article>
+								<article>
+									<a href="images/gallery/fulls/06_ufo_javascript.png" class="image">
+										<img src="images/gallery/thumbs/ufo_javascript.png" alt="" />
+									</a>
+									<div class="caption">
+										<h3>UFOs</h3>
+										<p>Presenting compiled UFO data in dynamic tables using JavaScript and HTML.</p>
+										<ul class="actions fixed">
+											<li><span class="button primary small">JavaScript</span></li>
+											<li><span class="button primary small">HTML</span></li>
+										</ul>
+									</div>
+									<ul class="actions fit">
+										<li><a href="https://github.com/chichi-ugo/UFOs" class="button primary">View Project</a></li>
+									</ul>
+								</article>
+								<article>
+									<a href="images/gallery/fulls/07_earthquakes.jpg" class="image">
+										<img src="images/gallery/thumbs/earthquakes.PNG" alt="" />
+									</a>
+									<div class="caption">
+										<h3>Mapping Earthquakes</h3>
+										<p>Creating geographical maps that map earthquake data using JavaScript</p>
+										<ul class="actions fixed">
+											<li><span class="button primary small">JavaScript</span></li>
+											<li><span class="button primary small">HTML</span></li>
+										</ul>
+										<ul class="actions fixed">
+											<li><span class="button primary small">GeoJSON data</span></li>
+										</ul>
+									</div>
+									<ul class="actions fit">
+										<li><a href="https://github.com/chichi-ugo/Mapping_Earthquakes" class="button primary">View Project</a></li>
+									</ul>
+								</article>
+								<article>
+									<a href="images/gallery/fulls/08_wallstreet_vba.png" class="image">
+										<img src="images/gallery/thumbs/wallstreet_vba.png" alt="" />
+									</a>
+									<div class="caption">
+										<h3>Wall Street Stock Analysis</h3>
+										<p>Using VBA in Excel to efficiently sort through and find specific information in a vast dataset.</p>
+										<ul class="actions fixed">
+											<li><span class="button primary small">Microsoft Excel</span></li>
+											<li><span class="button primary small">VBA</span></li>
+										</ul>
+									</div>
+									<ul class="actions fit">
+										<li><a href="https://github.com/chichi-ugo/stock-analysis" class="button primary">View Project</a></li>
+									</ul>
+								</article>
+							</div>
+					</section>
+
+				<!-- Footer -->
+					<footer class="wrapper style1 align-center">
+						<div class="inner">
+							<h3>Connect with Me</h3>
+							<ul class="icons">
+								<li><a href="https://github.com/chichi-ugo" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="https://www.linkedin.com/in/chinweoke-ugochukwu-a702671a3/" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+							</ul>
+							<p>&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						</div>
+					</footer>
+
+			</div>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
+
+	</body>
 </html>
